# DetectorMascarilla-ESP32

./: README.md
Codigo-DetectorMascarilla/: VisionModel.ipynb
Codigo-DetectorMascarilla/ESP32/: camera_pins.h  connect_wifi.h  idf_component.yml  main.cc  model.h  tf_functions.cc  tf_functions.h  webserver.cc
Documentacion/: Link-Video.txt
main/: CMakeLists.txt  connect_wifi.c  tf_functions.cc  tf_functions.h  webserver.cc  webserver.h
